--- a/css_project.html
+++ b/css_project.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Dedicated page for the CSS Project.">
-    <title>CSS Project Details</title>
+    <title>CSS Project Details - Code Portfolio</title>
     <link rel="stylesheet" href="./css/style.css">
-    </head>
-<body>
+</head>
+<body id="top">
     <canvas id="matrixCanvas"></canvas>
+
     <header class="capcalera-principal">
         <div class="logo-container">
             <div class="code-image-simulation">
-                &lt;div class="code"&gt;
+                &lt;style&gt; .design { color: neon; } &lt;/style&gt;
             </div>
         </div>
         <nav class="menu-navegacio-principal">
@@ -21,22 +22,23 @@
                 <li><a href="projects_portfolio.html">Projects</a></li>
                 <li><a href="satisfaction_form.html">Satisfaction Form</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#">Other Links</a></li>
             </ul>
         </nav>
     </header>
 
     <main class="contingut-principal-detall">
-
         <section class="projecte-detall">
 
             <div class="titol-detall">
-                <h1><a href="http://externa.com/css-guide" target="_blank">CSS Project: In-depth Layout and Styling (Click to view external resource)</a></h1>
+                <h1>CSS Project: In-depth Layout and Styling</h1>
+                <p style="text-align: center; margin-top: -15px;">
+                    <a href="http://externa.com/css-guide" target="_blank" style="color: #0f0; font-size: 0.8em;">[ External Resource Access ]</a>
+                </p>
             </div>
 
             <div class="project-part part-1">
-                <h2>Part 1: Core Selectors and Properties</h2>
                 <div class="content-lines">
+                    <h2>Part 1: Core Selectors and Properties</h2>
                     <p class="descripcio-linies">Understanding Type, Class, ID, and Attribute selectors.</p>
                     <p class="descripcio-linies">Specificity and the Cascade order in styling.</p>
                     <p class="descripcio-linies">Managing Box Model: margin, border, padding, and content.</p>
@@ -46,10 +48,10 @@
             </div>
 
             <div class="project-part part-2">
-                <h2>Part 2: Flexbox and Grid</h2>
                 <div class="content-lines">
+                    <h2>Part 2: Flexbox and Grid</h2>
                     <p class="descripcio-linies">Implementing one-dimensional layouts with Flexbox ('justify-content', 'align-items').</p>
-                    <p class="descripcio-linies">Creating complex two-dimensional structures with CSS Grid ('grid-template-columns', 'grid-area').</p>
+                    <p class="descripcio-linies">Creating complex structures with CSS Grid ('grid-template-columns').</p>
                     <p class="descripcio-linies">Differences between inline-block and block elements.</p>
                     <p class="descripcio-linies">Positioning schemes (relative, absolute, fixed, sticky).</p>
                 </div>
@@ -57,18 +59,24 @@
             </div>
 
             <div class="project-part part-3">
-                <h2>Part 3: Responsive Design and Animations</h2>
                 <div class="content-lines">
-                    <p class="descripcio-linies">Using Media Queries to adapt layouts for different screens ('min-width', 'max-width').</p>
+                    <h2>Part 3: Responsive Design and Animations</h2>
+                    <p class="descripcio-linies">Using Media Queries to adapt layouts for different screens.</p>
                     <p class="descripcio-linies">Introduction to Transitions and basic Keyframe animations.</p>
-                    <p class="descripcio-linies">Use of pseudo-classes (:hover, :focus) and pseudo-elements (::before, ::after).</p>
-                    <p class="descripcio-linies">Using variables with '--property-name'.</p>
+                    <p class="descripcio-linies">Use of pseudo-classes (:hover, :focus) and pseudo-elements.</p>
+                    <p class="descripcio-linies">Using CSS variables with '--property-name'.</p>
                 </div>
                 <div class="cercle css-image">@keyframes</div>
             </div>
 
             <div class="menu-navegacio-pagines-detall">
-                page navigation menu
+                <h3 style="color: #0f0; margin-bottom: 10px;">&gt;_ Execute Navigation</h3>
+                <div style="display: flex; justify-content: center; gap: 15px; flex-wrap: wrap;">
+                    <a href="index.html" style="color: #0f0; text-decoration: none;">[ cd /home ]</a>
+                    <a href="python_project.html" style="color: #0f0; text-decoration: none;">[ ./python ]</a>
+                    <a href="linux_project.html" style="color: #0f0; text-decoration: none;">[ ./linux ]</a>
+                    <a href="projects_portfolio.html" style="color: #fff; text-decoration: none;">[ cd .. ]</a>
+                </div>
             </div>
 
         </section>
@@ -76,12 +84,8 @@
 
     <footer class="peu-pagina">
         <p>&copy; 2025 Code Project Name. All Rights Reserved.</p>
-        <div class="xarxes-socials">
-            <a href="#">[Social 1]</a> |
-            <a href="#">[Social 2]</a> |
-            <a href="#">[Social 3]</a>
-        </div>
     </footer>
+
     <script src="./js/matrix_effect.js"></script>
 </body>
 </html>
