--- a/linux_project.html
+++ b/linux_project.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Dedicated page for the Linux Project.">
-    <title>Linux Project Details</title>
+    <meta name="description" content="Dedicated page for the Linux Project focusing on administration and security.">
+    <title>Linux Project Details - Code Portfolio</title>
     <link rel="stylesheet" href="./css/style.css">
-    </head>
-<body>
+</head>
+<body id="top">
     <canvas id="matrixCanvas"></canvas>
+
     <header class="capcalera-principal">
         <div class="logo-container">
             <div class="code-image-simulation">
-                &lt;div class="code"&gt;
+                &lt;ssh user@linux-server&gt;
             </div>
         </div>
         <nav class="menu-navegacio-principal">
@@ -21,7 +22,6 @@
                 <li><a href="projects_portfolio.html">Projects</a></li>
                 <li><a href="satisfaction_form.html">Satisfaction Form</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#">Other Links</a></li>
             </ul>
         </nav>
     </header>
@@ -34,8 +34,8 @@
             </div>
 
             <div class="project-part part-1">
-                <h2>Part 1: Linux Command Line Interface (CLI)</h2>
                 <div class="content-lines">
+                    <h2>Part 1: Linux Command Line Interface (CLI)</h2>
                     <p class="descripcio-linies">Using basic commands like 'ls', 'cd', 'pwd', and 'man'.</p>
                     <p class="descripcio-linies">Understanding file system hierarchy (/, /home, /etc, /var).</p>
                     <p class="descripcio-linies">Input/Output Redirection (>, >>, <, |).</p>
@@ -45,9 +45,9 @@
             </div>
 
             <div class="project-part part-2">
-                <h2>Part 2: User Management and Permissions</h2>
                 <div class="content-lines">
-                    <p class="descripcio-linies">Creating, modifying, and deleting user accounts ('useradd', 'usermod', 'userdel').</p>
+                    <h2>Part 2: User Management and Permissions</h2>
+                    <p class="descripcio-linies">Creating, modifying, and deleting user accounts ('useradd', 'usermod').</p>
                     <p class="descripcio-linies">Group management ('groupadd', 'groupdel').</p>
                     <p class="descripcio-linies">Understanding file permissions (rwx) and octal notation (777).</p>
                     <p class="descripcio-linies">Changing permissions and ownership ('chmod', 'chown').</p>
@@ -56,8 +56,8 @@
             </div>
 
             <div class="project-part part-3">
-                <h2>Part 3: Networking and Package Management</h2>
                 <div class="content-lines">
+                    <h2>Part 3: Networking and Package Management</h2>
                     <p class="descripcio-linies">Configuration of network interfaces ('ip addr', 'ifconfig').</p>
                     <p class="descripcio-linies">Using utilities like 'ping', 'ssh', 'scp'.</p>
                     <p class="descripcio-linies">Managing services with 'systemctl'.</p>
@@ -67,7 +67,13 @@
             </div>
 
             <div class="menu-navegacio-pagines-detall">
-                menu de navegacion entre paginas
+                <h3 style="color: #0f0; margin-bottom: 10px;">&gt;_ System Navigation</h3>
+                <div style="display: flex; justify-content: center; gap: 15px; flex-wrap: wrap;">
+                    <a href="index.html" style="color: #0f0; text-decoration: none;">[ cd /home ]</a>
+                    <a href="python_project.html" style="color: #0f0; text-decoration: none;">[ ./python ]</a>
+                    <a href="css_project.html" style="color: #0f0; text-decoration: none;">[ ./css ]</a>
+                    <a href="projects_portfolio.html" style="color: #fff; text-decoration: none;">[ cd .. ]</a>
+                </div>
             </div>
 
         </section>
@@ -75,12 +81,8 @@
 
     <footer class="peu-pagina">
         <p>&copy; 2025 Code Project Name. All Rights Reserved.</p>
-        <div class="xarxes-socials">
-            <a href="#">[Social 1]</a> |
-            <a href="#">[Social 2]</a> |
-            <a href="#">[Social 3]</a>
-        </div>
     </footer>
+
     <script src="./js/matrix_effect.js"></script>
 </body>
 </html>
